@@ -218,8 +218,11 @@ VAR char		*SystemGroupAuthKey	VALUE(NULL);
  * Prototypes...
  */
 
+extern int	cupsdCheckPermissions(const char *filename,
+		                      const char *suffix, int mode,
+	 			      int user, int group, int is_dir,
+				      int create_dir);
 extern char	*cupsdGetDateTime(time_t t);
-extern int	cupsdReadConfiguration(void);
 #ifdef HAVE_GSSAPI
 extern int	cupsdLogGSSMessage(int level, int major_status,
 		                   int minor_status,
@@ -232,6 +235,7 @@ __attribute__ ((__format__ (__printf__, 2, 3)))
 ;
 extern int	cupsdLogPage(cupsd_job_t *job, const char *page);
 extern int	cupsdLogRequest(cupsd_client_t *con, http_status_t code);
+extern int	cupsdReadConfiguration(void);
 
 
 /*
